# gpt2giga

./: .env.alloptions.example  .env.defaults  .env.example  .env.http.example  .env.oauth.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  gpt2giga.py  pyproject.toml  start-gpt2giga.sh  start-indexer.sh  start-multi.sh  stunnel.conf.example
.github/workflows/: ci.yaml  docker_image.yaml
examples/: embeddings.py  models.py  openai_agents.py
examples/chat_completions/: base64_image.py  chat_completion.py  function_calling.py  image_url.py  structured_output.py  structured_output_nested.py
examples/responses/: base64_image.py  function_calling.py  image_url.py  single_prompt.py  structured_output.py  structured_output_nested.py  with_instructions.py
gpt2giga/: __init__.py  __main__.py  api_server.py  auth.py  config.py  logger.py  middleware.py  protocol.py  router.py  utils.py
gpt2giga/config/: completions.json.example  embeddings.json.example
gpt2giga/rag/: __init__.py  retriever.py
gpt2giga/tools/: __init__.py  chunker.py  embedder.py  indexer.py  parser.py  scanner.py  vector_db.py  vector_db_qdrant.py
tests/: test_embeddings_variants.py  test_logger.py  test_middleware.py
tests/test_api_server/: test_api_server.py  test_api_server_lifespan.py
tests/test_cli/: test_cli.py
tests/test_config/: test_config.py
tests/test_protocol/: test_protocol.py  test_protocol_attachments.py  test_protocol_attachments_success.py  test_protocol_messages_attachments.py  test_protocol_response_format.py  test_protocol_transform_params.py  (+1 more)
(+13 files in other folders)
